fix: fixing imports and organizando pastas

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@deemlol/next-icons": "^0.1.9",
+    "@hookform/resolvers": "^5.2.2",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -17,7 +18,8 @@
     "react-markdown": "^10.1.0",
     "react-split": "^2.0.14",
     "react-split-pane": "^0.1.92",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
