--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@deemlol/next-icons": "^0.1.9",
     "@hookform/resolvers": "^5.2.2",
+    "@svgr/webpack": "^8.1.0",
+    "install": "^0.13.0",
+    "lodash.debounce": "^4.0.8",
     "next": "16.0.6",
+    "next-themes": "^0.4.6",
+    "npm": "^11.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-split": "^2.0.14",
     "react-split-pane": "^0.1.92",
@@ -23,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
